--- a/file/index.html
+++ b/file/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flexbox Header Example</title>
+    <title>aaaaaa</title>
     <style>
         header {
             display: flex;
@@ -44,7 +44,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="header-left">Profile</a>
+        <a href="#" class="header-left">texttexttexttexttexttext</a>
         <ol class="header-right">
             <li class="header-link"><a href="#">About</a></li>
             <li class="header-link"><a href="#">Bicycle</a></li>
